tests/ui/endpoint/wants_auth_non_bool.stderr
error: Expected boolean literal
 --> tests/ui/endpoint/wants_auth_non_bool.rs:8:25
  |
8 | #[read_all(wants_auth = "yes, please")]
  |                         ^^^^^^^^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/wants_auth_non_bool.rs:4:10
  |
4 | #[derive(Resource)]
  |          ^^^^^^^^ not found in this scope
  |
  = note: this error originates in the derive macro `Resource` (in Nightly builds, run with -Z macro-backtrace for more info)
